# vv

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootstrapvv.sh  flake.nix  index.html  params.json  vv  vv.yaml  vvrc.example
deprecated/: Makefile
man/: vv.1
test/: test.bats
